
  - The skeleton server Main class includes code to override the default value
    of http-server.http.port.
  - TestServer initializes and tears down the HttpClient once for the class.
  - Resource classes are tested only through TestServer.
  - TestServer no longer uses resource files to supply JSON.
  - The sample server no longer uses events

* HttpServer

  We created TestingAdminHttpServer and TestingAdminHttpServerModule for
  testing of admin port resources.

* [Bug] Fix connection hang when ResponseHandler throws without reading large
  response.

* Library Upgrades

  - AutoValue to 1.1

* Maven plugin upgrades
  - maven-resources-plugin to 2.7
  - maven-invoker-plugin to 2.0.0

Platform 1.26

* HttpServer

  We added a HttpServer.BusyThreads.Max metric that reports the maximum number
  of busy threads in the http-server pool.

* Library Upgrades

  - Jersey to 2.21

Platform 1.25

* BalancingHttpClient

  The balancer now reports a ServiceClient.Concurrency.Max metric that reports
  the maximum number of concurrent requests to any instance in the pool.

* Stats

  We created a MaxGauge stats class for reporting the maximum value, over the
  one minute reporting interval, value of a metric.

Platform 1.24

* Logging

  Platform applications with log.output-file configured now also write a
  bootstrap.log file in the same directory. The bootstrap.log file contains
  a copy of messages logged from Bootstrap and is truncated on every startup.
  This is intended to make the (redacted) configuration and other startup
  information more accessible when troubleshooting.

  We added Logging.addLogTester() and Logging.resetLogTesters() methods for
  writing unit tests that verify logging.

* TestingHttpClient

  We created a default constructor for TestingHttpClient. The constructed
  TestingHttpClient needs a call to setProcessor(Processor) before it can
  be effectively used.

  We added TestingHttpClient.getRequestCount().
